<resources>
    <string name="app_name">OTS</string>
    <string name="signUpButton">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="signUpTheme">Sign Up manager</string>
    <string name="hintPassword">Password</string>
    <string name="hintEmail">Email</string>
    <string name="hintPhone">Phone number</string>
    <string name="SignInText">Sign In</string>
    <string name="hintTeamName">Team name</string>
    <string name="buttonSaveTeamName">Save Team Name</string>
    <string name="buttonInviteMembers">Invite Members</string>
    <string name="buttonDeleteMembers">Delete Members</string>
    <string name="buttonEditTeamDone">Done</string>
    <string name="addTaskActionButton">Add Task</string>
    <string name="title_activity_add_employee_activity_nav">Add Employee</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_team_activity_nav">Edit Team</string>
    <string name="name">name</string>
    <string name="log_of">Sign Out</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="title_activity_add_task">Add Task</string>
    <string name="taskDescriptionField">Add task description </string>
    <string name="lowPriority">Low</string>
    <string name="normalPriority">Normal</string>
    <string name="urgentPriority">Urgent</string>
    <string name="Priority">Priority</string>
    <string name="RequirePhoto">Require Photo</string>
    <string name="tomorrowRadioButton">Tomorrow</string>
    <string name="todayRadioButton">Today</string>
    <string name="otherRadioButton">Other</string>
    <string name="setTime">Set Time</string>
    <string name="setDate">Set Date</string>
    <string name="saveAndSent">Save/ Send</string>
    <string name="selectEmployee">Select Employee</string>
    <string name="selectLocation">Select Location</string>
    <string name="selectCategory">Select Category</string>
    <string name="taskDateTime">Task Date Time</string>
    <string name="waiting">Waiting</string>
    <string name="taskLocation">Task Location</string>
    <string name="addTask">Add Task</string>
    <string name="taskCategory">Task Category</string>
    <string name="title_activity_task_show">List of tasks</string>
    <string name="deadline">Deadline:</string>
    <string name="title_activity_show_task">List of tasks</string>
    <string name="numberOfTask">Number of Tasks:</string>
    <string name="showOnlyActualTask">Show Past Tasks</string>
    <string name="editTeam">Edit Team</string>
    <string name="teamTasks">Team Tasks</string>
    <string name="taskHeader">Task Title</string>
    <string name="title_activity_task_show_employee">List of tasks</string>
    <string name="title_activity_report_task">Report Task</string>
    <string name="title_activity_locations">Add locations</string>
    <string name="title_activity_test_locations">TestLocationsActivity</string>
    <string name="enterEmail">Please enter an e-mail</string>
    <string name="enterValidEmail">Please enter a valid email address</string>
    <string name="enterPassword">Please enter a password</string>
    <string name="passwordMin">Password must contain at least 6 characters</string>
    <string name="passwordMax">Password must contain no more then 15 characters</string>
    <string name="passwordWhitespace">Password must not contain whitespaces</string>
    <string name="passwordValidation">Password can only contain Letters, numbers or \'*\', \'#\' and \'@\'</string>
    <string name="enterPhoneNumber">Please enter a phone number</string>
    <string name="phoneNumberLength">Phone number must be beetween 8 to 10 digits</string>
    <string name="phoneNumberValidation">Phone number must contain only digits</string>
    <string name="noInternetToast">No internet connection. Application work offline</string>
    <string name="areYouSure">"Are you sure? "</string>
    <string name="confrim">Confirm</string>
    <string name="employeeNotAdd">" employees will not be added"</string>
    <string name="Yes">YES</string>
    <string name="No">NO</string>
    <string name="noEmployessToAdd">No employees to add</string>
    <string name="addingEmployee">Adding employee to data base</string>
    <string name="pleaseWait">Please wait</string>
    <string name="addNewEmployeeDone">Add new employee done</string>
    <string name="addEmployeeDone">Add employee done</string>
    <string name="added">" added"</string>
    <string name="addAllNewEmployeeDone">Add all new employee done</string>
    <string name="addEmployeeFail">Add new employee fail</string>
    <string name="addEmployeeFailNotification">Add employee fail</string>
    <string name="dot">.</string>
    <string name="doubleDot">:</string>
    <string name="sendTaskToEmployee">Sending task to employee</string>
    <string name="taskSendToEmployee">Task send to employee</string>
    <string name="taskNotAdd">Task not add.Try again later</string>
    <string name="headerEmpty">Task header field is empty</string>
    <string name="taskHeaderMaximum">Task header maximum:</string>
    <string name="taskDescriptionEmpty">Task description field is empty</string>
    <string name="notSelectEmployee">You not select a employee</string>
    <string name="notSelectCategory">You not select a category</string>
    <string name="notSelectLocation">You not select a location</string>
    <string name="dateFromPast">You can\'t select date from past</string>
    <string name="deleteLocation">Delete Location</string>
    <string name="title_activity_settings">Settings</string>
    <string name="timeUpdate">How many times a minute updating the list of tasks</string>
    <string name="noEmailClient">There is no email client installed.</string>
    <string name="general">General</string>
    <string name="cleaning">Cleaning</string>
    <string name="electricity">Electricity</string>
    <string name="computers">Computers</string>
    <string name="other">Other</string>
    <string name="defaultLocation">World</string>
    <string name="conectionProblem">Connection problem.Try again later</string>
    <string name="enterTeamName">Please enter a team name</string>
    <string name="changeYourTeamName">We now change your team name</string>
    <string name="locationInDateBase">This location is already in data base</string>
    <string name="somethingWentWrong">Something went wrong, try again later.</string>
    <string name="goBack">Go back</string>
    <string name="youRejectTask">You reject the task</string>
    <string name="taskDone">Task Done</string>
    <string name="taskCancel">Task Cancel</string>
    <string name="deadlineLate">Deadline late</string>
    <string name="status">Status:</string>
    <string name="viewPhoto">View photo</string>
    <string name="loadImageFails">Can\'t load image. Try again</string>
    <string name="statusNotChange">Task status not change</string>
    <string name="mustLoadPhoto">You must load photo to this task</string>
    <string name="ilegalStatus">You can\'t set this status to current task</string>
    <string name="statusSave">Status save</string>
    <string name="viewTask">View task</string>
    <string name="editTask">Edit task</string>
    <string name="cancelTask">Cancel task</string>
    <string name="taskCancelDone">Task cancel</string>
    <string name="taskNotCancel">Task not cancel</string>
    <string name="refreshFinish">Refresh finish</string>
    <string name="signingIn">Signing-In</string>
    <string name="wrongLongInDetails">Wrong Log-In details</string>
    <string name="enterNewUsername">enter new username</string>
    <string name="OK">OK</string>
    <string name="enterNewPassword">enter new password</string>
    <string name="youBeenAddetToTeam">"You have been added to Team of "</string>
    <string name="signupFailed">signup failed</string>
    <string name="cancel">Cancel</string>
    <string name="addingManagerToDataBase">Adding manager to data base</string>
    <string name="createTeam">Sign up done.Now create team</string>
    <string name="refresh">Refresh</string>
    <string name="noCurrentTask">No current task</string>
    <string name="reportViewTask">Report/View task</string>
    <string name="youDontHaveWorkers">You don\'t have registered workers</string>
    <string name="noStatus">You not have new task status update</string>
    <string name="noTaskYet">You not have new task yet</string>
    <string name="yourTeamHave">"Your team have "</string>
    <string name="taskNow">" task now"</string>
    <string name="youHave">"You  have a "</string>
    <string name="deadlineChange">Deadline of task change</string>
    <string name="descriptionChange">Task description  change</string>
    <string name="headerChange">Task header  change</string>
    <string name="categoryChange">Task category  change</string>
    <string name="locationChange">Task location  change</string>
    <string name="taskCancelNotification">"Task cancel "</string>
    <string name="employeeChangeStatus">"Employee change status of task "</string>
    <string name="ofTask">Task:</string>
    <string name="newStatusIs">" .New status:"</string>
    <string name="newTaskTodo">"You have new task todo.Enjoy! "</string>
    <string name="youHaveNewTasks">"You have new "</string>
    <string name="taskTodo">" tasks todo.Enjoy! "</string>
    <string name="locationNotFount">Locations not found.</string>
    <string name="buttonAddToList">Add to list</string>
    <string name="submitEmployee">Send/Submit</string>
    <string name="messageToEmployee">Hi You have been invited to be a team member in an OTS Team created by me. Use this link to download and install the App from Google Play. Your password is your number phone</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="employee">Employee</string>
    <string name="statusText">Status</string>
    <string name="editTextLocationName">Location Name</string>
    <string name="addLocationButton">Add Location</string>
    <string name="categoryTextView">Category:</string>
    <string name="taskHeaderTextView">Task header:</string>
    <string name="textViewDescripition">Description:</string>
    <string name="textViewPriority">Priority:</string>
    <string name="textViewStatus">Task Status:</string>
    <string name="textViewProgress">Task Progress</string>
    <string name="reportTask">Save and send</string>
    <string name="addPicture">Add Picture</string>
    <string name="textViewDeadline">Deadline</string>
    <string name="textDeadline">Deadline</string>
    <string name="employeeOfTask">Employee:</string>
    <string name="locationTextView">Location:</string>
    <string name="image">image</string>
    <string name="saveOption">Save</string>
    <string name="taskHeaderText">Task Header</string>
    <string name="employeeText">Employee</string>
    <string name="statusTextView">Status</string>
    <string name="deadlineText">Deadline</string>
    <string name="imageView">imageView</string>
    <string name="androidStudio">Android Studio</string>
    <string name="androidStudio2">android.studio@android.com</string>
    <string name="aboutMenu">about</string>
    <string name="version">Version 1.0</string>
    <string name="developed"><![CDATA[Developed by Dima Girya & Liza Gilman]]></string>
    <string name="allRights">All rights reserved</string>
    <string name="DateApp">March 2016</string>
</resources>
