<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/teamTasksDrawer"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/teamTasks" />
        <item
            android:id="@+id/editTeamDrawer"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/editTeam" />
        <item
            android:id="@+id/taskLocationOption"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/taskLocation" />
        <item
            android:id="@+id/taskCategoryOption"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/taskCategory" />
    </group>

</menu>
