<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SignUpActivityManager">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/signUpTheme"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editEmailSignUpManager"
        android:layout_alignStart="@+id/editEmailSignUpManager" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hintEmail"
        android:ems="10"
        android:id="@+id/editEmailSignUpManager"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hintPassword"
        android:ems="10"
        android:id="@+id/editPasswordSignUpManager"
        android:password="true"
        android:layout_below="@+id/editPhoneSignUpManager"
        android:layout_alignLeft="@+id/editEmailSignUpManager"
        android:layout_alignStart="@+id/editEmailSignUpManager" />

    <EditText style=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/hintPhone"
        android:ems="10"
        android:id="@+id/editPhoneSignUpManager"
        android:phoneNumber="false"
        android:layout_below="@+id/editTextManagerName"
        android:layout_alignLeft="@+id/editPasswordSignUpManager"
        android:layout_alignStart="@+id/editPasswordSignUpManager" />
    <EditText style=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:ems="10"
        android:id="@+id/editTextManagerName"
        android:layout_below="@+id/editEmailSignUpManager"
        android:layout_alignLeft="@+id/editPasswordSignUpManager"
        android:layout_alignStart="@+id/editPasswordSignUpManager" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpButton"
        android:id="@+id/buttonSignUp"
        android:onClick="signUpManagerClicked"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="85dp" />

    <Button
        android:onClick="signInManagerClickedInSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/buttonSignUp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



</RelativeLayout>
