<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_add_task"
    tools:context="dima.liza.mobile.shenkar.com.otsproject.activity.AddTaskActivity">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTaskHeader"
        android:hint="@string/taskHeader"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTextTaskDescription"
        android:layout_alignEnd="@+id/editTextTaskDescription" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTaskDescription"
        android:hint="@string/taskDescriptionField"
        android:layout_below="@+id/editTextTaskHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/employeesDropDown"
        android:layout_alignEnd="@+id/employeesDropDown" />
    <Spinner
        android:id="@+id/employeesDropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:padding="0dp"
        android:textSize="12sp"
        android:layout_below="@+id/editTextTaskDescription"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Spinner
        android:padding="0dp"
        android:textSize="12sp"
        android:id="@+id/categoryDropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/employeesDropDown"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/buttonSaveAndSentTask"
        android:layout_alignEnd="@+id/buttonSaveAndSentTask" />
    <Spinner
        android:padding="0dp"
        android:textSize="12sp"
        android:id="@+id/taskLocationDropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_alignTop="@+id/categoryDropDown"
        android:layout_toEndOf="@+id/buttonSaveAndSentTask"
        android:layout_toRightOf="@+id/buttonSaveAndSentTask" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Priority"
        android:id="@+id/textViewPriority"
        android:layout_below="@+id/categoryDropDown"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="30dp"
        android:weightSum="1"
        android:id="@+id/radioGroupPriority"
        android:layout_below="@+id/textViewPriority"
        android:layout_centerHorizontal="true">
        <RadioButton
            android:id="@+id/lowPriorityRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/lowPriority"
            android:checked="true"
            android:onClick="onClickRadioGroupPriority"/>

        <RadioButton
            android:id="@+id/normalPriorityRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="0.04"
            android:text="@string/normalPriority"
            android:onClick="onClickRadioGroupPriority"/>

        <RadioButton
            android:id="@+id/urgentPriorityRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/urgentPriority"
            android:onClick="onClickRadioGroupPriority"/>

    </RadioGroup>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RequirePhoto"
        android:id="@+id/checkBoxRequirePhoto"
        android:checked="false"
        android:onClick="onClickRequirePhoto"
        android:layout_below="@+id/radioGroupPriority"
        android:layout_alignRight="@+id/textViewTime"
        android:layout_alignEnd="@+id/textViewTime" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/taskDateTime"
        android:id="@+id/textViewTime"
        android:layout_below="@+id/checkBoxRequirePhoto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="30dp"
        android:weightSum="1"
        android:id="@+id/radioGroupTime"
        android:layout_below="@+id/textViewTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/tomorrowRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="0.04"
            android:text="@string/tomorrowRadioButton"
            android:onClick="onClickRadioGroupTimeDate"
            android:checked="true" />

        <RadioButton
            android:id="@+id/todayRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:onClick="onClickRadioGroupTimeDate"
            android:text="@string/todayRadioButton" />

        <RadioButton
            android:id="@+id/otherDateTimeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:onClick="onClickRadioGroupTimeDate"
            android:text="@string/otherRadioButton" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setTime"
        android:id="@+id/buttonSetTime"
        android:onClick="onClickSetTime"
        android:layout_below="@+id/textViewDeadline"
        android:layout_alignLeft="@+id/checkBoxRequirePhoto"
        android:layout_alignStart="@+id/checkBoxRequirePhoto" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setDate"
        android:id="@+id/buttonSetDate"
        android:onClick="onClickSetDate"
        android:layout_alignTop="@+id/buttonSetTime"
        android:layout_toRightOf="@+id/buttonSetTime"
        android:layout_toEndOf="@+id/buttonSetTime" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveAndSent"
        android:id="@+id/buttonSaveAndSentTask"
        android:onClick="onClickSubmitTask"
        android:layout_below="@+id/buttonSetTime"
        android:layout_alignLeft="@+id/buttonSetTime"
        android:layout_alignStart="@+id/buttonSetTime"
        android:layout_toLeftOf="@+id/dateTask"
        android:layout_toStartOf="@+id/dateTask" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deadline"
        android:id="@+id/textViewDeadline"
        android:layout_below="@+id/radioGroupTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/timeTask"
        android:layout_alignTop="@+id/textViewDeadline"
        android:layout_toRightOf="@+id/buttonSetTime"
        android:layout_toEndOf="@+id/buttonSetTime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/dateTask"
        android:layout_alignTop="@+id/timeTask"
        android:layout_toRightOf="@+id/buttonSetDate"
        android:layout_toEndOf="@+id/buttonSetDate" />


</RelativeLayout>
