<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dima.liza.mobile.shenkar.com.otsproject.activity.AddEmployeeActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/addEmployeeEmail"
        android:hint="@string/hintEmail"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/addEmployeePhone"
        android:hint="@string/hintPhone"
        android:layout_below="@+id/addEmployeeEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAddToList"
        android:id="@+id/buttonAddToList"
        android:onClick="onClickAddToList"
        android:layout_below="@+id/addEmployeePhone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitEmployee"
        android:id="@+id/buttonAddEmployeeSubmit"
        android:onClick="onClickAddEmployeeSubmit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/addEmployeePhone"
        android:layout_alignEnd="@+id/addEmployeePhone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/messageToEmployee"
        android:id="@+id/messageToEmployee"
        android:layout_below="@+id/buttonAddToList"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="text" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewAddEmployee"
        android:layout_alignRight="@+id/messageToEmployee"
        android:layout_alignEnd="@+id/messageToEmployee"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/messageToEmployee"
        android:layout_above="@+id/buttonAddEmployeeSubmit"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/email"
        android:id="@+id/textView9"
        android:layout_below="@+id/messageToEmployee"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/phoneNumber"
        android:id="@+id/textView10"
        android:layout_alignBottom="@+id/textView9"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9" />

</RelativeLayout>
